modify responsive image resizing to prevent overlap

--- a/_sass/components/_podcast.scss
+++ b/_sass/components/_podcast.scss
@@ -115,7 +115,12 @@
     border: 4px solid $white;
     display: block;
 
-    @media (min-width: 768px) {
+    @media (min-width: 768px) and (max-width: 991px) {
+      max-width: 180px;
+      margin-bottom: 20px;
+    }
+
+    @media (min-width: 992px) {
       margin-bottom: 0;
       margin-left: 0;
       margin-right: auto;
